<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QuickNote</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="skip">Skip</string>
    <string name="_continue">Continue</string>
    <string name="login_to_your_n_account">Login to your \nAccount</string>
    <string name="email">Email</string>
    <string name="_email_address">email address</string>
    <string name="password">Password</string>
    <string name="_password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="arrow_back">Arrow Back</string>
    <string name="create_your_n_account">Create your \nAccount</string>
    <string name="name">Name</string>
    <string name="_name">name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_your_n_password">Reset your \nPassword</string>
    <string name="send">Send</string>
    <string name="search">search</string>
    <string name="menu">menu</string>
    <string name="add">Add</string>
    <string name="no_notes">No notes</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="type_something">Type something...</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign Out</string>
    <string name="search_notes">Search notes</string>
    <string name="no_notes_found">No notes found</string>
    <string name="create_new_category">Create New Category</string>
    <string name="category">Category</string>
    <string name="category_name">category name</string>
    <string name="create">Create</string>
</resources>