<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.fragments.SignUpFragment">

    <ImageButton
        android:id="@+id/ivBackSignUp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/arrow_back"
        android:background="@drawable/bg_round"
        android:backgroundTint="?attr/colorSurfaceContainer"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/tvTitleSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_your_n_account"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackSignUp"
        app:layout_constraintVertical_bias="0.029999971" />

    <TextView
        android:id="@+id/tvNameSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSignUp"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/etNameSignUp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:autofillHints="text"
        android:background="@drawable/bg_round_outline"
        android:ems="10"
        android:hint="@string/_name"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameSignUp"
        app:layout_constraintVertical_bias="0.029999971"
        app:layout_constraintWidth_max="488dp" />

    <TextView
        android:id="@+id/tvEmailSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameSignUp"
        app:layout_constraintVertical_bias="0.04000002" />

    <EditText
        android:id="@+id/etEmailSignUp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_round_outline"
        android:ems="10"
        android:hint="@string/_email_address"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailSignUp"
        app:layout_constraintVertical_bias="0.029999971"
        app:layout_constraintWidth_max="488dp" />

    <TextView
        android:id="@+id/tvPasswordSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSignUp"
        app:layout_constraintVertical_bias="0.04000002" />

    <EditText
        android:id="@+id/etPasswordSignUp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:autofillHints="password"
        android:background="@drawable/bg_round_outline"
        android:ems="10"
        android:hint="@string/_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordSignUp"
        app:layout_constraintVertical_bias="0.029999971"
        app:layout_constraintWidth_max="488dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/sign_up"
        android:enabled="false"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordSignUp"
        app:layout_constraintVertical_bias="0.120000005"
        app:layout_constraintWidth_max="320dp" />

    <TextView
        android:id="@+id/tvTextMessageSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="?attr/colorSecondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvSignIn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sign_in"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTextMessageSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.85" />

    <ProgressBar
        android:id="@+id/progressBarSignUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>