<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.fragments.ResetPasswordFragment">


    <ImageButton
        android:id="@+id/ivBackResetPass"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/arrow_back"
        android:src="@drawable/ic_arrow_back"
        android:background="@drawable/bg_round"
        android:backgroundTint="?attr/colorSurfaceContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/tvTitleResetPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_your_n_password"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackResetPass"
        app:layout_constraintVertical_bias="0.029999971" />

    <TextView
        android:id="@+id/tvEmailResetPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleResetPass"
        app:layout_constraintVertical_bias="0.06999999" />

    <EditText
        android:id="@+id/etEmailResetPass"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_round_outline"
        android:ems="10"
        android:hint="@string/_email_address"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailResetPass"
        app:layout_constraintVertical_bias="0.029999971"
        app:layout_constraintWidth_max="488dp" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/send"
        android:enabled="false"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailResetPass"
        app:layout_constraintVertical_bias="0.120000005"
        app:layout_constraintWidth_max="320dp" />
</androidx.constraintlayout.widget.ConstraintLayout>