<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitleCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_new_category"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTextCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleCategory"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_round_outline"
        android:layout_marginTop="4dp"
        android:autofillHints="text"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/category_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextCategory"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/create"
        android:layout_marginTop="8dp"
        app:cornerRadius="10dp"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCategory" />
</androidx.constraintlayout.widget.ConstraintLayout>